# Self-Healing-SRE-Agent

./: .copilotignore  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agents.py  app.py  auto_heal_ci.py  config.py  docker-compose.yml  graph.py  main.py  pyproject.toml  requirements.txt  ruff.toml  run.sh  setup.sh  state.py  test_app.py  tools.py  ui.py
.github/workflows/: auto-heal.yml  ci.yml
demo/: README.md  run.sh  test_app.py
docs/: ARCHITECTURE.md  INTERVIEW.md  PRODUCTION.md  RESOURCES.md  SETUP.md  TECHNICAL.md  TROUBLESHOOTING.md
docs/plans/: 2026-02-28-pip-package-design.md  2026-02-28-pip-package-implementation.md  2026-02-28-production-grade-design.md
sre_agent/: __init__.py  agents.py  auto_heal_ci.py  cli.py  graph.py  state.py  tools.py
tests/: test_cli.py  test_config.py  test_state.py  test_tools.py
